New Blog system in work

--- a/production/client/main.less
+++ b/production/client/main.less
@@ -52,6 +52,7 @@
 @import '{}/imports/ui/stylingsheets/course.less';
 @import '{}/imports/ui/stylingsheets/alert.less';
 @import '{}/imports/ui/stylingsheets/dash.less';
+@import '{}/imports/ui/stylingsheets/blogs.less';
 @import '{}/imports/ui/stylingsheets/margin-padding.less';
 @light-grey: rgb(236, 235, 234);
 @primary-dark: #43A047;
