--- a/production/imports/ui/components/navigation.html
+++ b/production/imports/ui/components/navigation.html
@@ -45,7 +45,7 @@
         </div>
         <div class="side-nav-body">
             <a href="/">Stream</a>
-            <a href="">Blogs</a>
+            <a href="/stories">Stories</a>
             {{#if isStudent}}
                 <a href="" id="academics"><div class="expand-text">Academics</div><i class="fa fa-times academics-icon"></i></a>
                 <ul class="course-list">
