--- a/production/imports/ui/stylingsheets/stream.less
+++ b/production/imports/ui/stylingsheets/stream.less
@@ -32,7 +32,7 @@
   background: #FFFFFF;
   padding: 15px;
   box-shadow: 0 15px 35px rgba(50,50,93,.1), 0 5px 15px rgba(0,0,0,.07);
-  transition: all 0.3s cubic-bezier(.25,.8,.25,1);
+  transition: box-shadow 0.3s cubic-bezier(.25,.8,.25,1);
   background-size: cover !important;
   background-repeat: no-repeat !important;
   background-position: center !important;
