--- a/production/imports/ui/components/editor.html
+++ b/production/imports/ui/components/editor.html
@@ -322,7 +322,7 @@
             <input data-role="tagsinput" class="announce-tags" placeholder="Write your tags here">
             <h3>Select Categories</h3>
             <p>By selecting the categories this post belongs to, we can improve the user feed experience. To select click on the box below and pick an option from the drop up box, you can choose multiple if needed.</p>
-            <select name="category-selector announcement-category" class="category-select" multiple style="width: 75%">
+            <select name="category-selector" class="category-select announcement-category" multiple style="width: 75%">
             </select>
         </div>
         <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
@@ -368,7 +368,7 @@
             <div class="col-lg-4 col-md-3">
                 <h3>Select Categories</h3>
                 <p>By selecting the categories this post belongs to, we can improve the user feed experience. To select click on the box below and pick an option from the drop up box, you can choose multiple if needed.</p>
-                <select name="category-selector announcement-category" class="category-select" multiple style="width: 75%">
+                <select name="category-selector" class="category-select announcement-category" multiple style="width: 75%">
                 </select>
             </div>
             <div class="col-lg-4 col-md-3">
