--- a/production/imports/ui/components/editor.html
+++ b/production/imports/ui/components/editor.html
@@ -153,7 +153,7 @@
 <template name="blogEditor">
     <div class="container blog-editor" hidden>
         <h2 class="editor-title">Creating a new draft</h2>
-        <p class="editor-subtitle">Blog Post</p>
+        <p class="editor-subtitle">Story</p>
         <div class="row">
             <div class="col-lg-12 col-md-12">
                 <form class="form post-info-form full-width">
@@ -182,8 +182,10 @@
                         <select name="category-selector" class="category-select" id="blogCategorySelect" multiple style="width: 75%">
                         </select>
                         <hr />
-<!--                        <input type='checkbox' class='ios8-switch ios8-switch-lg' id='checkboxContribute'>
-                        <label for='checkboxContribute'>Allow Others To Contribute</label>-->
+                        <h3>Is this story related to any courses or clubs?</h3>
+                        <p>Select Them using the dialog below. Selecting these helps us index your story so when a user searches for it, they can find it easily.</p>
+                        <select name="category-selector" class="category-select" id="blogOrganizationSelect" multiple style="width: 75%">
+                        </select>
                     </div>
                 </div>
             </div>
@@ -322,8 +324,10 @@
             <input data-role="tagsinput" class="announce-tags" placeholder="Write your tags here">
             <h3>Select Categories</h3>
             <p>By selecting the categories this post belongs to, we can improve the user feed experience. To select click on the box below and pick an option from the drop up box, you can choose multiple if needed.</p>
-            <select name="category-selector" class="category-select announcement-category" multiple style="width: 75%">
-            </select>
+            <select name="category-selector" class="category-select announcement-category" multiple style="width: 75%"></select>
+            <h3>Is this Club related?</h3>
+            <p>If this announcement is for student clubs or teams, please select them below.</p>
+            <select name="category-selector" class="category-select clubs-category" multiple style="width: 75%"></select>
         </div>
         <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
             <h3>Set Priority</h3>
@@ -340,6 +344,7 @@
                     <h4 class="">Text</h4>
                 </div>
             </div>
+
         </div>
         <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
             <h3>Pick a date range</h3>
@@ -368,8 +373,10 @@
             <div class="col-lg-4 col-md-3">
                 <h3>Select Categories</h3>
                 <p>By selecting the categories this post belongs to, we can improve the user feed experience. To select click on the box below and pick an option from the drop up box, you can choose multiple if needed.</p>
-                <select name="category-selector" class="category-select announcement-category" multiple style="width: 75%">
-                </select>
+                <select name="category-selector" class="category-select announcement-category" multiple style="width: 75%"></select>
+                <h3>Is this Club related?</h3>
+                <p>If this announcement is for student clubs or teams, please select them below.</p>
+                <select name="category-selector" class="category-select clubs-category" multiple style="width: 75%"></select>
             </div>
             <div class="col-lg-4 col-md-3">
                 <h3>Pick a date range</h3>
