--- a/production/imports/ui/components/editor.html
+++ b/production/imports/ui/components/editor.html
@@ -277,7 +277,7 @@
                 </div>
             </div>
             {{> announcementHeadline id="textOnlyHeadline"}}
-            {{> announcementTextInput max="400"}}
+            {{> announcementTextInput max="1000"}}
             {{> announcementOptions imgAndText=false}}
         </div>
 
@@ -289,7 +289,7 @@
                 </div>
             </div>
             {{> announcementHeadline id="textImageHeadline"}}
-            {{> announcementTextInput max="400"}}
+            {{> announcementTextInput max="1000"}}
             {{> announcementImageInput id="announcementImageTwo"}}
             {{> announcementOptions imgAndText=true}}
 
@@ -400,7 +400,7 @@
         <div class="col-lg-12 col-md-12">
             <h3>Text Portion</h3>
             <textarea placeholder="Add your information here! 140 characters max." class="announcement-text" maxlength="{{max}}" id="textContent"></textarea>
-            <p class="text-left">You have <span class="announcement-counter">140</span> characters left.</p>
+            <p class="text-left">You have <span class="announcement-counter">{{max}}</span> characters left.</p>
         </div>
     </div>
 </template>
@@ -423,7 +423,7 @@
             </div>
         </div>
         {{> announcementHeadline id="suggestionHeadline"}}
-        {{> announcementTextInput max="500"}}
+        {{> announcementTextInput max="1000"}}
         <h3>Add an image if you like!</h3>
         {{> announcementImageInput id="suggestionImage"}}
         <div class="row mb-45">
