adding new login dialog

--- a/production/imports/ui/components/navigation.html
+++ b/production/imports/ui/components/navigation.html
@@ -62,3 +62,28 @@
     </div>
     <div class="nav-overlay"></div>
 </template>
+
+<template name="teachAssistPass">
+    <div class="modal fade">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h4 class="modal-title">Please input password for {{student_id}}</h4>
+                </div>
+                <div class="modal-body">
+                    <form id="reLoginForm">
+                        <div class="form-group">
+                            <input type="password" aria-describedby="TeachAssistPassword" placeholder="Password" id="reLoginPass">
+                        </div>
+                        <button type="submit" class="btn btn-primary btn-wide">Login</button>
+                    </form>
+                </div>
+
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                </div>
+
+            </div>
+        </div>
+    </div>
+</template>
