--- a/production/imports/ui/components/editor.html
+++ b/production/imports/ui/components/editor.html
@@ -1,6 +1,6 @@
 <template name="editor">
     {{#if canEdit}}
-        <div class="navbar-fixed-bottom editor-open">
+        <div class="editor-open">
             <i class="material-icons" id="openEditor">add</i>
         </div>
         <div class="container-fluid editor-main" hidden>
