--- a/production/imports/ui/stylingsheets/editor.less
+++ b/production/imports/ui/stylingsheets/editor.less
@@ -7,6 +7,12 @@
   overflow-y: scroll;
   top: 0; right: 0; bottom: 0; left: 0;
 }
+.editor-open{
+  bottom: 0;
+  margin-bottom: 0;
+  position: fixed;
+  right: 0;
+}
 .editor-title{
   text-align: center;
 }
