serious responsive optimization

--- a/mobile/imports/ui/components/botnav.html
+++ b/mobile/imports/ui/components/botnav.html
@@ -18,7 +18,7 @@
                         <div class="link-wrap">
                             <label for="home">
                                 <i class="fa fa-home" aria-hidden="true"></i>
-                                <span>Home</span>
+                                <span>Stream</span>
                             </label>
                             <label for="marks">
                                 <i class="fa fa-book" aria-hidden="true"></i>
@@ -26,7 +26,7 @@
                             </label>
                             <label for="news">
                                 <i class="fa fa-newspaper-o" aria-hidden="true"></i>
-                                <span>News</span>
+                                <span>Stories</span>
                             </label>
                             <label for="settings">
                                 <i class="fa fa-cog" aria-hidden="true"></i>
