--- a/production/imports/ui/stylingsheets/buttons.less
+++ b/production/imports/ui/stylingsheets/buttons.less
@@ -199,4 +199,6 @@ input[type="checkbox"].ios8-switch-lg + label:hover:after {
 input[type="checkbox"].ios8-switch-lg:checked + label:after {
   margin-left: 20px; /* x*2 */
 }
-
+select{
+  width: 100%;
+}
