--- a/production/imports/ui/stylingsheets/course.less
+++ b/production/imports/ui/stylingsheets/course.less
@@ -229,3 +229,13 @@
   -webkit-animation: bounce 2s infinite;
   animation: bounce 2s infinite;
 }
+
+@media screen and (max-width: 768px) {
+  .sections-container{
+    width: 90%;
+    margin-top: 80px;
+  }
+  .sections-container h3{
+    font-size: 18px !important;
+  }
+}
