--- a/production/imports/ui/stylingsheets/navigation.less
+++ b/production/imports/ui/stylingsheets/navigation.less
@@ -198,14 +198,7 @@
     margin-bottom: 0;
   }
 }
-@media screen and (max-width: 1366px) {
-  .top-nav nav .nav-oper{
-    font-size: 18px;
-  }
-  .top-nav nav .nav-extend{
-    font-size: 18px;
-  }
-}
+
 
 .nav-hub-progress{
   z-index: 4;
@@ -221,4 +214,28 @@
 }
 .disabled{
   cursor: not-allowed;
+}
+
+@media screen and (max-width: 1366px) {
+  .top-nav nav .nav-oper{
+    font-size: 18px;
+  }
+  .top-nav nav .nav-extend{
+    font-size: 18px;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .nav-title-text{
+    font-size: 22px;
+  }
+  .top-nav nav .nav-hub{
+    width: 70%;
+  }
+  .top-nav nav .nav-oper{
+    width: 15%;
+  }
+  .top-nav nav .nav-extend{
+    width: 15%;
+  }
 }
