--- a/mobile/client/main.css
+++ b/mobile/client/main.css
@@ -1,6 +1,6 @@
 /* Fonts */
 @import url('https://fonts.googleapis.com/css?family=Open+Sans:400,300,700,400italic');
-@import url('http://fonts.googleapis.com/css?family=PT+Sans:400,100,‌​100italic,300,300ita‌​lic,400italic,500,50‌​0italic,700,700itali‌​c,900italic,900');
+@import url('https://fonts.googleapis.com/css?family=PT+Sans:400,100,‌​100italic,300,300ita‌​lic,400italic,500,50‌​0italic,700,700itali‌​c,900italic,900');
 @import url('https://fonts.googleapis.com/css?family=Space+Mono:400,700');
 @import url('//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css');
 
