--- a/production/imports/ui/components/editor.html
+++ b/production/imports/ui/components/editor.html
@@ -4,10 +4,8 @@
             <i class="material-icons" id="openEditor">add</i>
         </div>
         <div class="container-fluid editor-main" hidden>
-            <div class="navbar-fixed-top">
-                <a class="editor-control editor-back"><i class="fa fa-arrow-left"></i></a>
-                <a class="editor-control editor-close"><i class="fa fa-times"></i></a>
-            </div>
+            <a class="editor-control editor-back"><i class="fa fa-arrow-left"></i></a>
+            <a class="editor-control editor-close"><i class="fa fa-times"></i></a>
             {{> announcementMenu}}
             {{> blogEditor}}
             {{> announcementEditor}}
@@ -23,7 +21,7 @@
                             </div>
                         </div>
                         <div class="row text-center mb-30">
-                            <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12" >
+                            <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 mb-30" >
                                 <div class="editor-options" id="startNewDraft">
                                     <i class="fa fa-pencil fa-5x mb-15"></i>
                                     <p>Create from scratch</p>
@@ -36,7 +34,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="row text-center">
+                        <div class="row text-center mb-30">
                             <div class="col-lg-12">
                                 <div class="editor-options" id="checkDrafts">
                                     <i class="fa fa-list fa-5x mb-15" aria-hidden="true"></i>
@@ -58,7 +56,7 @@
                         </div>
                         <div class="row text-center mb-30">
                             {{# if canWriteAnnounce}}
-                                <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12" id="startAnnouncement">
+                                <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12 mb-30" id="startAnnouncement">
                                     <div class="editor-options">
                                         <i class="fa fa-bullhorn fa-5x mb-15"></i>
                                         <p>Announcement</p>
@@ -66,14 +64,14 @@
                                 </div>
                             {{/ if}}
                             {{# if canWriteBlog}}
-                                <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12" id="startBlog">
+                                <div class="col-lg-4 col-md-4 hidden-xs mb-30" id="startBlog">
                                     <div class="editor-options">
                                         <i class="fa fa-newspaper-o fa-5x mb-15"></i>
                                         <p>Story</p>
                                     </div>
                                 </div>
                             {{/ if}}
-                            <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12" id="startSuggestion">
+                            <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12 mb-30" id="startSuggestion">
                                 <div class="editor-options">
                                     <i class="fa fa-commenting-o fa-5x mb-15"></i>
                                     <p>Suggestion</p>
@@ -155,12 +153,12 @@
                         <hr />
                         <h3>Select Categories</h3>
                         <p>By selecting the categories this post belongs to, we can improve the user feed experience. To select click on the box below and pick an option from the drop up box, you can choose multiple if needed.</p>
-                        <select name="category-selector" class="category-select" id="blogCategorySelect" multiple style="width: 75%">
+                        <select name="category-selector" class="category-select" id="blogCategorySelect" multiple style="width: 100%">
                         </select>
                         <hr />
                         <h3>Is this story related to any courses or clubs?</h3>
                         <p>Select Them using the dialog below. Selecting these helps us index your story so when a user searches for it, they can find it easily.</p>
-                        <select name="category-selector" class="category-select" id="blogOrganizationSelect" multiple style="width: 75%">
+                        <select name="category-selector" class="category-select" id="blogOrganizationSelect" multiple style="width: 100%">
                         </select>
                     </div>
                 </div>
@@ -179,7 +177,7 @@
                         <hr />
                         <h3>Set the visibility</h3>
                         <p>Choose who this blog post is written for, public means people outside the board will receive access.</p>
-                        <select name="category-selector" class="visibility-select" style="width: 75%">
+                        <select name="category-selector" class="visibility-select" style="width: 100%">
                             <option value="1">Everyone</option>
                             <option value="2">Students Only</option>
                             <option value="3">Teachers and Staff Only</option>
@@ -212,25 +210,25 @@
     <div class="container announcement-menu" hidden>
         <div class="announcement-type text-center">
             <div class="row mb-30">
-                <div class="col-lg-12 col-md-12 col-sm-12 mb-30">
+                <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 mb-30">
                     <h2>Solid,</h2>
                     <h4>How would you like to present your news?</h4>
                 </div>
             </div>
             <div class="row">
-                <div class="col-lg-4">
+                <div class="col-lg-4 col-sm-12 col-xs-12 mb-30">
                     <div class="editor-options" id="imageOnly">
                         <i class="fa fa-picture-o fa-5x mb-15"></i>
                         <p>I made a <b>Poster</b>. (Image Only)</p>
                     </div>
                 </div>
-                <div class="col-lg-4" id="textOnly">
+                <div class="col-lg-4 col-sm-12 col-xs-12 mb-30" id="textOnly">
                     <div class="editor-options">
                         <i class="fa fa-font fa-5x mb-15"></i>
                         <p>I wrote some <b>Text</b>. (Text Only)</p>
                     </div>
                 </div>
-                <div class="col-lg-4" id="textAndImage">
+                <div class="col-lg-4 col-sm-12 col-xs-12" id="textAndImage">
                     <div class="editor-options">
                         <i class="fa fa-heart-o fa-5x mb-15"></i>
                         <p>I have both a poster and some text.</p>
@@ -301,10 +299,10 @@
             <input data-role="tagsinput" class="announce-tags" placeholder="Write your tags here">
             <h3>Select Categories</h3>
             <p>By selecting the categories this post belongs to, we can improve the user feed experience. To select click on the box below and pick an option from the drop up box, you can choose multiple if needed.</p>
-            <select name="category-selector" class="category-select announcement-category" multiple style="width: 75%"></select>
+            <select name="category-selector" class="category-select announcement-category" multiple style="width: 100%"></select>
             <h3>Is this Club related?</h3>
             <p>If this announcement is for student clubs or teams, please select them below.</p>
-            <select name="category-selector" class="category-select clubs-category" multiple style="width: 75%"></select>
+            <select name="category-selector" class="category-select clubs-category" multiple style="width: 100%"></select>
         </div>
         <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
             <h3>Set Priority</h3>
@@ -333,7 +331,7 @@
             </div>
             <h3>Set the visibility</h3>
             <p>Choose who this blog post is written for, public means people outside the board will receive access.</p>
-            <select name="category-selector" class="visibility-select" style="width: 75%">
+            <select name="category-selector" class="visibility-select" style="width: 100%">
                 <option value="1">Everyone</option>
                 <option value="2">Students Only</option>
                 <option value="3">Teachers and Staff Only</option>
@@ -350,10 +348,10 @@
             <div class="col-lg-4 col-md-3">
                 <h3>Select Categories</h3>
                 <p>By selecting the categories this post belongs to, we can improve the user feed experience. To select click on the box below and pick an option from the drop up box, you can choose multiple if needed.</p>
-                <select name="category-selector" class="category-select announcement-category" multiple style="width: 75%"></select>
+                <select name="category-selector" class="category-select announcement-category" multiple style="width: 100%"></select>
                 <h3>Is this Club related?</h3>
                 <p>If this announcement is for student clubs or teams, please select them below.</p>
-                <select name="category-selector" class="category-select clubs-category" multiple style="width: 75%"></select>
+                <select name="category-selector" class="category-select clubs-category" multiple style="width: 100%"></select>
             </div>
             <div class="col-lg-4 col-md-3">
                 <h3>Pick a date range</h3>
@@ -365,7 +363,7 @@
                 </div>
                 <h3>Set the visibility</h3>
                 <p>Choose who this blog post is written for, public means people outside the board will receive access.</p>
-                <select name="category-selector" class="visibility-select" style="width: 75%">
+                <select name="category-selector" class="visibility-select" style="width: 100%">
                     <option value="1">Everyone</option>
                     <option value="2">Students Only</option>
                     <option value="3">Teachers and Staff Only</option>
