--- a/production/imports/ui/components/navigation.html
+++ b/production/imports/ui/components/navigation.html
@@ -1,14 +1,18 @@
 <template name="navigation">
     <div class="top-nav">
         <nav>
-            <div class="nav-extend"><span class="side-nav-prompt"><i class="fa fa-bars"></i> MENU</span></div>
+            <div class="nav-extend hidden-print">
+                <span class="side-nav-prompt">
+                    <i class="fa fa-bars"></i> <span class="hidden-xs hidden-sm">MENU</span>
+                </span>
+            </div>
             <div class="nav-hub">
                 <div class="nav-hub-progress"></div>
                 <div class="nav-title-text text-morph"><span>{{title}}</span></div>
             </div>
-            <div class="nav-oper">
+            <div class="nav-oper hidden-print">
                 <span class="top-operation-prompt">
-                    SEARCH
+                    <i class="fa fa-search"></i> <span class="hidden-sm hidden-xs">SEARCH</span>
                 </span>
             </div>
         </nav>
