--- a/production/imports/ui/stylingsheets/stream.less
+++ b/production/imports/ui/stylingsheets/stream.less
@@ -153,3 +153,12 @@
   min-height: 200px;
   opacity: 0.9;
 }
+
+@media screen and (max-width: 768px) {
+  .grid-sizer, .grid-item {
+    width: 100%;
+  }
+  .gutter-sizer{
+    width: 0;
+  }
+}
