--- a/production/imports/ui/components/navigation.html
+++ b/production/imports/ui/components/navigation.html
@@ -45,7 +45,7 @@
             <h4>
                 {{username}}
             </h4>
-            <a href="logout" class="logout-btn">LOG OUT</a>
+            <a href="/logout" class="logout-btn">LOG OUT</a>
         </div>
         <div class="side-nav-body">
             <a href="/">Stream</a>
