front end course bug fixes

--- a/production/imports/ui/components/navigation.html
+++ b/production/imports/ui/components/navigation.html
@@ -54,7 +54,7 @@
                 <a href="" id="academics"><div class="expand-text">Academics</div><i class="fa fa-times academics-icon"></i></a>
                 <ul class="course-list">
                     {{#each courses}}
-                        <li><a href="/course/{{subject_id}}">{{course}}<i class="{{state}}">{{mark}}</i></a></li>
+                        <li><a href="/course/{{subject_id}}" class="course-link">{{course}}<i class="{{state}}">{{mark}}</i></a></li>
                     {{/ each}}
                 </ul>
                 <a href="">Suggestions to Admin</a>
